--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.buttons {
+  display: flex;
+  gap: 2rem;
+  justify-content: center
+  ;
+}
